Removing MaxPermSize parameter